added old qwertz patch

--- a/doc/Guidebook.tex
+++ b/doc/Guidebook.tex
@@ -600,7 +600,8 @@ Go one step in the direction indicated (see Figure 2).  If you sense
 or remember
 a monster there, you will fight the monster instead.  Only these
 one-step movement commands cause you to fight monsters; the others
-(below) are ``safe.''
+(below) are ``safe.'' (Use {\it z} instead of {\it y} if
+{\it qwertz\_layout} is set.)
 %.sd
 \begin{center}
 \begin{tabular}{cc}
@@ -2534,6 +2535,10 @@ Prompt for confirmation before praying (default on).
 \item[\ib{pushweapon}]
 Using the `w' (wield) command when already wielding
 something pushes the old item into your alternate weapon slot (default off).
+%.Ip
+\item[\ib{qwertz\_layout}]
+This option can be used to swap the y and z keys for movement and zapping.
+This is useful for some keyboard layouts.
 %.Ip
 \item[\ib{race}]
 Selects your race (for example, ``{\tt race:human}'').  Default is random.
